--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
         <item>Metric</item>
         <item>Imperial</item>
     </string-array>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
